--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,165 @@
-/* background colors for clarity */
+#container {
+    width: 100%;
+    height: 100%;
 
-body {
-    background-color: lightcyan;
-    font-family: "Inter Tight", Arial, Arial, Helvetica, sans-serif;
-    max-height: 100%;
-    min-width: 50%;
-    max-width: 100%;
 }
+
+.wrapper {
+    background: lightblue;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+
+    font-family: "Inter Tight", Arial, Helvetica, sans-serif;
+}
+
+
+.center {
+    text-align: center;
+}
+
 
 header {
-    background-color: yellow;
-    padding: 0px;
+    flex: 1;
+    display: grid;
+    grid-template-columns: [first] auto [line1] auto [last];
+    grid-template-rows: [first-row] 50% [line1-row] 50px [last-row];
+    justify-content: left;
+    background: #FFF07C;
+    padding: 10px;
+    padding-bottom: 0px;
+
+    position: sticky;
+    top: 0;
 }
 
+
 img {
-    background-color: white;
-    display: inline;
-    border: 1px solid #ddd;
+    grid-column-start: first;
+    grid-column-end: line1;
+    grid-row-start: first-row;
+    grid-row-end: last-row;
+
+    width: 250px;
     border-radius: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 300px;
+    padding-right: 10px;
 }
 
 .name {
+    grid-column-start: line1;
+    grid-column-end: last;
+    grid-row-start: first-row;
+    grid-row-end: line1-row;
+    position: relative;
+    left: 40px;
+    top: -20px;
+
+    font-size: 5rem;
+    color: #0D1321;
+}
+
+.nav__links {
+    grid-column-start: line1;
+    grid-column-end: last;
+    grid-row-start: line1-row;
+    grid-row-end: last-row;
+}
+
+.nav__links li {
     display: inline-block;
-    font-size: 64px;
-    position: absolute;
-    top: 80px;
-    left: 350px;
+    padding-right: 70px;
 }
 
-nav {
-    background-color: red; 
+.nav__links li a {
+    padding: 9px 25px;
+    border-radius: 5%;
+    background: #0D1321;
+    font-size: 30px;
+    transition: all 0.3s ease 0s;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    padding-left: 50px;
-    overflow: hidden;
+.nav__links li a:hover {
+    color: #80FF72;
 }
 
-li {
-    display:inline-block;
-    padding-right: 100px;
-}
-
-li a {
-    display: block;
-    padding: 14px 20px;
-    background-color: #333;
-}
-
-li a:hover {
-    background-color: #04AA6D;
-}
-
-li a:link, a:visited {
+.nav__links li a:link, a:visited {
     color: white;
     text-decoration: none;
 }
 
-.active {
-    background-color: limegreen;
+
+main {
+    background: #80FF72;
+    flex: 2;
+    
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: stretch;
+
+    color: #0D1321;
 }
 
+h2 {
+    font-size: 3rem;
+}
+
+#about {
+}
+
+#resume {
+}
+
+#projects {
+}
+
+#projects section {
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    width:100%;
+    margin-top: 3rem;
+}
+
+#projects a {
+    width: 20%;
+    padding:1rem;
+    margin:0 1rem;
+    transition:all .5s ease;
+    color:#0D1321;
+    font-size:1.5rem;
+    box-shadow: 20px 38px 34px -26px hsla(0,0%,0%,.2);
+    border-radius: 1rem;
+    border: solid 1px #0D1321;
+}
+
+#projects a:hover {
+    box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
+}
+
+#projects a button {
+    
+    align-self:center;
+    background: transparent;
+    outline: none;
+    border: 0;
+}
+
+#projects a button:hover {
+    cursor: pointer;
+}
+
+#contact {
+    padding: 20px;
+    padding-top: 0px;
+    font: Arial;
+}
+
+
 footer {
-    background-color: pink;
+    background: #0D1321;
+    padding: 30px;
+    text-align: center;
 }
