--- a/styles.css
+++ b/styles.css
@@ -92,13 +92,11 @@ img {
 main {
     background: #80FF72;
     flex: 2;
-    
     padding: 10px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: stretch;
-
     color: #0D1321;
 }
 
@@ -106,13 +104,8 @@ h2 {
     font-size: 3rem;
 }
 
-#about {
-}
-
-#resume {
-}
-
-#projects {
+h2, h3, p {
+    font-family: "Inter Tight", Arial, Helvetica, sans-serif;
 }
 
 #projects section {
@@ -124,6 +117,7 @@ h2 {
 }
 
 #projects a {
+    background-color: #FFF07C;
     width: 20%;
     padding:1rem;
     margin:0 1rem;
@@ -140,7 +134,6 @@ h2 {
 }
 
 #projects a button {
-    
     align-self:center;
     background: transparent;
     outline: none;
@@ -149,6 +142,10 @@ h2 {
 
 #projects a button:hover {
     cursor: pointer;
+}
+
+#projects a button h2 {
+    font-size: 1.5rem;
 }
 
 #contact {
